--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    #map{
+      height: 400px;
+      width: 100%;
+    }
+  </style>
   <title>Document</title>
 </head>
 <body>
 <h1> HELLO THERE!</h1>
+<div id="map"></div>
 <script src="vendor/jquery-3.0.0.js"></script>
+<!-- <script>
+  console.log('running jquery');
+
+    $.ajax({
+      url: '/api/maps',
+      method: 'GET'
+    }).then((res) => {
+      var s = document.createElement("script");
+      s.type = "text/javascript";
+      s.src = `https://maps.googleapis.com/maps/api/js?key=${process.env.API_KEY}&callback=initMap&libraries=&v=weekly`
+      $("head").append(s);
+    });
+</script> -->
 </body>
 </html>
