--- a/public/index.html
+++ b/public/index.html
@@ -15,18 +15,25 @@
 <h1> HELLO THERE!</h1>
 <div id="map"></div>
 <script src="vendor/jquery-3.0.0.js"></script>
-<!-- <script>
+<script>
   console.log('running jquery');
+  $(document).ready(function() {
+    $.getScript( "/api/maps" )
+      .done(function( script, textStatus ) {
+        console.log( textStatus );
+      });
+  })
 
-    $.ajax({
-      url: '/api/maps',
-      method: 'GET'
-    }).then((res) => {
-      var s = document.createElement("script");
-      s.type = "text/javascript";
-      s.src = `https://maps.googleapis.com/maps/api/js?key=${process.env.API_KEY}&callback=initMap&libraries=&v=weekly`
-      $("head").append(s);
-    });
-</script> -->
+
+    // $.ajax({
+    //   url: '/api/maps',
+    //   method: 'GET'
+    // }).then((res) => {
+    //   var s = document.createElement("script");
+    //   s.type = "text/javascript";
+    //   s.src = `https://maps.googleapis.com/maps/api/js?key=${process.env.API_KEY}&callback=initMap&libraries=&v=weekly`
+    //   $("head").append(s);
+    // });
+</script>
 </body>
 </html>
